crates/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__dict_unpacking.snap
---
source: crates/ruff_python_parser/src/parser.rs
expression: parse_ast
---
Dict(
    ExprDict {
        range: 0..25,
        keys: [
            Some(
                String(
                    ExprString {
                        range: 1..4,
                        value: StringExprValue {
                            inner: Single(
                                StringLiteral {
                                    range: 1..4,
                                    value: "a",
                                    unicode: false,
                                },
                            ),
                        },
                    },
                ),
            ),
            None,
            Some(
                String(
                    ExprString {
                        range: 16..19,
                        value: StringExprValue {
                            inner: Single(
                                StringLiteral {
                                    range: 16..19,
                                    value: "d",
                                    unicode: false,
                                },
                            ),
                        },
                    },
                ),
            ),
        ],
        values: [
            String(
                ExprString {
                    range: 6..9,
                    value: StringExprValue {
                        inner: Single(
                            StringLiteral {
                                range: 6..9,
                                value: "b",
                                unicode: false,
                            },
                        ),
                    },
                },
            ),
            Name(
                ExprName {
                    range: 13..14,
                    id: "c",
                    ctx: Load,
                },
            ),
            String(
                ExprString {
                    range: 21..24,
                    value: StringExprValue {
                        inner: Single(
                            StringLiteral {
                                range: 21..24,
                                value: "e",
                                unicode: false,
                            },
                        ),
                    },
                },
            ),
        ],
    },
)
