crates/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__fstrings_with_unicode.snap
---
source: crates/ruff_python_parser/src/parser.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..29,
            value: FString(
                ExprFString {
                    range: 0..29,
                    value: FStringExprValue {
                        inner: Concatenated(
                            [
                                String(
                                    StringLiteral {
                                        range: 0..6,
                                        value: "foo",
                                        unicode: true,
                                    },
                                ),
                                FString(
                                    FString {
                                        range: 7..15,
                                        elements: [
                                            Expression(
                                                FStringExpressionElement {
                                                    range: 9..14,
                                                    expression: Name(
                                                        ExprName {
                                                            range: 10..13,
                                                            id: "bar",
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                String(
                                    StringLiteral {
                                        range: 16..21,
                                        value: "baz",
                                        unicode: false,
                                    },
                                ),
                                String(
                                    StringLiteral {
                                        range: 22..29,
                                        value: " some",
                                        unicode: false,
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
    Expr(
        StmtExpr {
            range: 30..59,
            value: FString(
                ExprFString {
                    range: 30..59,
                    value: FStringExprValue {
                        inner: Concatenated(
                            [
                                String(
                                    StringLiteral {
                                        range: 30..35,
                                        value: "foo",
                                        unicode: false,
                                    },
                                ),
                                FString(
                                    FString {
                                        range: 36..44,
                                        elements: [
                                            Expression(
                                                FStringExpressionElement {
                                                    range: 38..43,
                                                    expression: Name(
                                                        ExprName {
                                                            range: 39..42,
                                                            id: "bar",
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                String(
                                    StringLiteral {
                                        range: 45..51,
                                        value: "baz",
                                        unicode: true,
                                    },
                                ),
                                String(
                                    StringLiteral {
                                        range: 52..59,
                                        value: " some",
                                        unicode: false,
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
    Expr(
        StmtExpr {
            range: 60..89,
            value: FString(
                ExprFString {
                    range: 60..89,
                    value: FStringExprValue {
                        inner: Concatenated(
                            [
                                String(
                                    StringLiteral {
                                        range: 60..65,
                                        value: "foo",
                                        unicode: false,
                                    },
                                ),
                                FString(
                                    FString {
                                        range: 66..74,
                                        elements: [
                                            Expression(
                                                FStringExpressionElement {
                                                    range: 68..73,
                                                    expression: Name(
                                                        ExprName {
                                                            range: 69..72,
                                                            id: "bar",
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                String(
                                    StringLiteral {
                                        range: 75..80,
                                        value: "baz",
                                        unicode: false,
                                    },
                                ),
                                String(
                                    StringLiteral {
                                        range: 81..89,
                                        value: " some",
                                        unicode: true,
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
    Expr(
        StmtExpr {
            range: 90..128,
            value: FString(
                ExprFString {
                    range: 90..128,
                    value: FStringExprValue {
                        inner: Concatenated(
                            [
                                String(
                                    StringLiteral {
                                        range: 90..96,
                                        value: "foo",
                                        unicode: true,
                                    },
                                ),
                                FString(
                                    FString {
                                        range: 97..116,
                                        elements: [
                                            Literal(
                                                FStringLiteralElement {
                                                    range: 99..103,
                                                    value: "bar ",
                                                },
                                            ),
                                            Expression(
                                                FStringExpressionElement {
                                                    range: 103..108,
                                                    expression: Name(
                                                        ExprName {
                                                            range: 104..107,
                                                            id: "baz",
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                },
                                            ),
                                            Literal(
                                                FStringLiteralElement {
                                                    range: 108..115,
                                                    value: " really",
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                String(
                                    StringLiteral {
                                        range: 117..123,
                                        value: "bar",
                                        unicode: true,
                                    },
                                ),
                                String(
                                    StringLiteral {
                                        range: 124..128,
                                        value: "no",
                                        unicode: false,
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
]
