crates/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__parse_f_string.snap
---
source: crates/ruff_python_parser/src/parser.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..14,
            value: FString(
                ExprFString {
                    range: 0..14,
                    value: FStringExprValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..14,
                                    elements: [
                                        Literal(
                                            FStringLiteralElement {
                                                range: 2..13,
                                                value: "Hello world",
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
