crates/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__parse_kwargs.snap
---
source: crates/ruff_python_parser/src/parser.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..32,
            value: Call(
                ExprCall {
                    range: 0..32,
                    func: Name(
                        ExprName {
                            range: 0..7,
                            id: "my_func",
                            ctx: Load,
                        },
                    ),
                    arguments: Arguments {
                        range: 7..32,
                        args: [
                            String(
                                ExprString {
                                    range: 8..20,
                                    value: StringExprValue {
                                        inner: Single(
                                            StringLiteral {
                                                range: 8..20,
                                                value: "positional",
                                                unicode: false,
                                            },
                                        ),
                                    },
                                },
                            ),
                        ],
                        keywords: [
                            Keyword {
                                range: 22..31,
                                arg: Some(
                                    Identifier {
                                        id: "keyword",
                                        range: 22..29,
                                    },
                                ),
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 30..31,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            },
                        ],
                    },
                },
            ),
        },
    ),
]
