crates/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__parse_print_2.snap
---
source: crates/ruff_python_parser/src/parser.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..23,
            value: Call(
                ExprCall {
                    range: 0..23,
                    func: Name(
                        ExprName {
                            range: 0..5,
                            id: "print",
                            ctx: Load,
                        },
                    ),
                    arguments: Arguments {
                        range: 5..23,
                        args: [
                            String(
                                ExprString {
                                    range: 6..19,
                                    value: StringExprValue {
                                        inner: Single(
                                            StringLiteral {
                                                range: 6..19,
                                                value: "Hello world",
                                                unicode: false,
                                            },
                                        ),
                                    },
                                },
                            ),
                            NumberLiteral(
                                ExprNumberLiteral {
                                    range: 21..22,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                        ],
                        keywords: [],
                    },
                },
            ),
        },
    ),
]
