crates/ruff_python_parser/src/snapshots/ruff_python_parser__parser__tests__parse_string.snap
---
source: crates/ruff_python_parser/src/parser.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..13,
            value: String(
                ExprString {
                    range: 0..13,
                    value: StringExprValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..13,
                                value: "Hello world",
                                unicode: false,
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
